SubDirFileIterator: Fix performance

When iterating over ~one million files, it reduces
the total time spent on iterating from ~80 seconds
into ~11 seconds.

The performance may be compared using tst_subdirfileiterator.cpp
manual test.

Fixes: QTCREATORBUG-28892
Change-Id: Ia3eba7e9327a879d20185b8362f8cbbaca67b1de